--- a/.github/workflows/dependency-review.yml
+++ b/.github/workflows/dependency-review.yml
@@ -2,7 +2,7 @@
 name: Dependency Review
 
 on:
-  pull_request:
+  pull_request_target:  # Use pull_request_target to access secrets for Dependabot PRs
     types: [opened, synchronize]
 
 jobs:
@@ -19,6 +19,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
+          ref: ${{ github.event.pull_request.head.sha }}  # Checkout PR branch, not base
           fetch-depth: 0
 
       - uses: JetBrains/junie-github-action@v0
