--- a/.github/workflows/secret-audit.yml
+++ b/.github/workflows/secret-audit.yml
@@ -17,7 +17,7 @@ jobs:
         with:
           fetch-depth: 2  # Need parent commit for diff
 
-      - uses: JetBrains/junie-github-action@main
+      - uses: JetBrains/junie-github-action@nikita.barkov/new-prompt-generation
         id: junie
         with:
           junie_api_key: ${{ secrets.JUNIE_API_KEY }}
@@ -57,7 +57,10 @@ jobs:
 
             [If no secrets found:]
             No secrets detected in this commit.
-
+            
+            Procedure:
+            Use gh pr diff ${{ github.event.pull_request.head.ref }} to get a diff of the PR. 
+            
             Do NOT modify any files.
 
       - name: Check results
