--- a/.github/workflows/code-review.yml
+++ b/.github/workflows/code-review.yml
@@ -17,7 +17,7 @@ jobs:
         with:
           fetch-depth: 0
 
-      - uses: JetBrains/junie-github-action@main
+      - uses: JetBrains/junie-github-action@nikita.barkov/new-prompt-generation
         with:
           junie_api_key: ${{ secrets.JUNIE_API_KEY }}
           use_single_comment: "true"
@@ -54,5 +54,8 @@ jobs:
             - [ ] Tests: Adequate coverage
             - [ ] Performance: No bottlenecks
             - [ ] Documentation: Complex logic explained
-
+            
+            Procedure:
+            Use gh pr diff ${{ github.event.pull_request.head.ref }} to get a diff of the PR. 
+            
             Do NOT modify any files.
