--- a/.github/workflows/junie.yml
+++ b/.github/workflows/junie.yml
@@ -31,7 +31,7 @@ jobs:
 
       - name: Run Junie
         id: junie
-        uses: JetBrains/junie-github-action@main
+        uses: JetBrains/junie-github-action@nikita.barkov/new-prompt-generation
         with:
           junie_api_key: ${{ secrets.JUNIE_API_KEY }}
           use_single_comment: true
