--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"No tests specified\" && exit 0"
   },
   "dependencies": {
-    "express": "^4.18.0"
+    "express": "^4.19.0"  // change to newer version
   },
   "devDependencies": {
     "eslint": "^8.0.0"
