Remove dependency-review workflow and refine workflows' prompts for clarity

--- a/.github/workflows/secret-audit.yml
+++ b/.github/workflows/secret-audit.yml
@@ -61,7 +61,7 @@ jobs:
             Procedure:
             Use gh pr diff ${{ github.event.pull_request.head.ref }} to get a diff of the PR. 
             
-            Do NOT modify any files.
+            Only provide feedback without modifying files.
 
       - name: Check results
         if: steps.junie.outputs.junie_summary != ''
