--- a/.github/workflows/code-review.yml
+++ b/.github/workflows/code-review.yml
@@ -22,7 +22,7 @@ jobs:
           junie_api_key: ${{ secrets.JUNIE_API_KEY }}
           use_single_comment: "true"
           prompt: |
-            Review this PR for:
+            Review pr diff for:
 
             **Security:**
             - SQL injection, XSS, exposed secrets
@@ -58,4 +58,4 @@ jobs:
             Procedure:
             Use gh pr diff ${{ github.event.pull_request.head.ref }} to get a diff of the PR. 
             
-            Do NOT modify any files.
+            Only provide feedback without modifying files.
