--- a/.github/workflows/secret-audit.yml
+++ b/.github/workflows/secret-audit.yml
@@ -17,7 +17,7 @@ jobs:
         with:
           fetch-depth: 2  # Need parent commit for diff
 
-      - uses: JetBrains/junie-github-action@nikita.barkov/new-prompt-generation
+      - uses: JetBrains/junie-github-action@main
         id: junie
         with:
           junie_api_key: ${{ secrets.JUNIE_API_KEY }}
