--- a/.github/workflows/resolve-conflicts.yml
+++ b/.github/workflows/resolve-conflicts.yml
@@ -35,6 +35,12 @@ jobs:
           junie_api_key: ${{ secrets.JUNIE_API_KEY }}
           resolve_conflicts: true
 
+      - name: Print output
+        run: cat newfile.txt
+
+      - name: Print commits
+        run: git log -n 10
+
       - name: Upload project working directory as artifact
         if: always() && steps.prepare.outputs.SHOULD_SKIP != 'true'
         uses: actions/upload-artifact@v4
