--- a/.github/workflows/test-merge.yml
+++ b/.github/workflows/test-merge.yml
@@ -37,10 +37,11 @@ jobs:
         shell: bash
         env:
           MERGE_BRANCH: ${{ inputs.merge_branch }}
+          JUNIE_HOME: /tmp/junie-work
         run: |
           TASK_JSON="{\"mergeTask\":{\"branch\":\"${MERGE_BRANCH}\"}}"
           echo "Running Junie with task: $TASK_JSON"
-          OUTPUT=$(junie --input-format="json" --output-format="json" --auth="${{ secrets.JUNIE_API_KEY }}" <<<"$TASK_JSON")
+          OUTPUT=$(junie --cache-dir="${JUNIE_HOME}" --input-format="json" --output-format="json" --auth="${{ secrets.JUNIE_API_KEY }}" <<<"$TASK_JSON")
           echo "Junie output:"
           echo "$OUTPUT"
 
@@ -54,6 +55,36 @@ jobs:
       - name: Push changes
         run: |
           git push --set-upstream origin ${{ inputs.branch }}
+
+      - name: Upload Junie working directory as artifact
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: junie-working-directory
+          path: /tmp/junie-work
+          retention-days: 7
+          if-no-files-found: warn
+          include-hidden-files: true
+
+      - name: Upload Junie logs as artifact
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: junie-logs
+          path: ~/.junie/logs
+          retention-days: 7
+          if-no-files-found: warn
+          include-hidden-files: true
+
+      - name: Upload Junie sessions as artifact
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: junie-sessions
+          path: ~/.junie/sessions
+          retention-days: 7
+          if-no-files-found: warn
+          include-hidden-files: true
 
       - name: Upload workspace as artifact
         if: always()
