--- a/.github/workflows/test-merge.yml
+++ b/.github/workflows/test-merge.yml
@@ -33,6 +33,11 @@ jobs:
         run: |
           git checkout --no-track -B ${{ inputs.branch }} origin/${{ inputs.branch }}
 
+      - name: Configure git
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+
       - name: Install Junie
         shell: bash
         run: npm install -g @jetbrains/junie-cli@561.1.0
