Comment out Junie integration steps and add debug step to print workflow inputs in `junie-jira.yml`.

--- a/.github/workflows/junie-jira.yml
+++ b/.github/workflows/junie-jira.yml
@@ -39,16 +39,21 @@ jobs:
     if: ${{ inputs.action == 'jira_event' }}
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 1
+      - name: Print workflow inputs
+        run: |
+          echo "All workflow_dispatch inputs:"
+          echo '${{ toJSON(inputs) }}'
 
-      - name: Run Junie
-        id: junie
-        uses: JetBrains/junie-github-action@nikita.barkov/jira-integration
-        with:
-          junie_api_key: ${{ secrets.JUNIE_API_KEY }}
-          jira_base_url: ${{ secrets.JIRA_BASE_URL }}
-          jira_email: ${{ secrets.JIRA_EMAIL }}
-          jira_api_token: ${{ secrets.JIRA_API_TOKEN }}
+#      - name: Checkout repository
+#        uses: actions/checkout@v4
+#        with:
+#          fetch-depth: 1
+
+#      - name: Run Junie
+#        id: junie
+#        uses: JetBrains/junie-github-action@nikita.barkov/jira-integration
+#        with:
+#          junie_api_key: ${{ secrets.JUNIE_API_KEY }}
+#          jira_base_url: ${{ secrets.JIRA_BASE_URL }}
+#          jira_email: ${{ secrets.JIRA_EMAIL }}
+#          jira_api_token: ${{ secrets.JIRA_API_TOKEN }}
