--- a/.github/workflows/code-review.yml
+++ b/.github/workflows/code-review.yml
@@ -16,7 +16,7 @@ jobs:
         with:
           fetch-depth: 0
 
-      - uses: JetBrains/junie-github-action@v0
+      - uses: JetBrains/junie-github-action@nikita.barkov/new-mcp
         with:
           junie_api_key: ${{ secrets.JUNIE_API_KEY }}
           use_single_comment: "true"
