--- a/.github/workflows/code-review.yml
+++ b/.github/workflows/code-review.yml
@@ -25,45 +25,5 @@ jobs:
             1. Download the Pull Request diff using `gh pr diff ${{ github.event.pull_request.head.ref }}`
             2. Review the downloaded diff according to the criteria below
             3. Output summary following the template below using `submit` action
-            
-            ## Review Criteria
-            
-            ```
-            **Security:**
-            - SQL injection, XSS, exposed secrets
-              - Authentication/authorization issues
-              - Input validation vulnerabilities
-            
-            **Performance:**
-            - N+1 queries, memory leaks
-              - Inefficient algorithms (nested loops, etc.)
-              - Blocking operations
-            
-            **Code Quality:**
-            - Complexity, duplication, naming
-              - Missing tests for new logic
-              - Undocumented complex logic
-            ```
-            
-            ## Summary template
-            
-            ```
-            ## 🎯 Summary
-            [2-3 sentences overall assessment]
-            
-            ## ⚠️ Issues Found
-            [Each issue: File:line, Severity (Critical/High/Medium/Low), Description, Suggested fix with code example]
-            
-            ## ✨ Highlights
-            [1-2 things done well]
-            
-            ## 📋 Checklist
-            - [ ] Security: No vulnerabilities
-              - [ ] Tests: Adequate coverage
-              - [ ] Performance: No bottlenecks
-              - [ ] Documentation: Complex logic explained
 
-            ## Additional instructions
-            - Strictly follow the plan above (`Your task is to:` section)
-            - You are not expected to explore the repo. Do review solely based on the downloaded diff
-            - You are not expected to run any code or any commands except `gh pr diff`
+            Add no comments to the PR and just suggest what can be changed in summary.
