--- a/.github/workflows/code-review.yml
+++ b/.github/workflows/code-review.yml
@@ -20,10 +20,4 @@ jobs:
         with:
           junie_api_key: ${{ secrets.JUNIE_API_KEY }}
           use_single_comment: "true"
-          prompt: |
-            Your task is to:
-            1. Download the Pull Request diff using `gh pr diff ${{ github.event.pull_request.head.ref }}`
-            2. Review the downloaded diff according to the criteria below
-            3. Output summary following the template below using `submit` action
-            
-            Add no comments to the PR and just suggest what can be changed in summary.
+          prompt: "code-review"
