--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "express": "^4.18.0"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.29.0",
+    "@babel/preset-typescript": "^7.28.5",
     "eslint": "^8.0.0",
     "jest": "^29.0.0"
   }
